[package]
name = "cosmwasm_template"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-schema = "1.5.0"
cosmwasm-std = "1.5.0"
cw-multi-test = { version = "0.20.0", optional = true }
cw-storage-plus = "1.2.0"
cw2 = "1.1.2"
schemars = "0.8.16"
serde = { version = "1.0.195", features = ["derive"] }
thiserror = "1.0.56"

[dev-dependencies]
cw-multi-test = "0.20.0"
